--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.11",
@@ -47,6 +48,7 @@
   },
   "devDependencies": {
     "@tanstack/react-query-devtools": "^4.29.12",
+    "@types/react-helmet": "^6.1.6",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.26"
   }
