--- a/package.json
+++ b/package.json
@@ -52,5 +52,6 @@
 		"@types/react-helmet": "^6.1.6",
 		"@types/react-router-dom": "^5.3.3",
 		"@types/styled-components": "^5.1.26"
-	}
+	},
+	"proxy": "https://api.coinpaprika.com"
 }
