--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"react-helmet-async": "^1.3.0",
 		"react-router-dom": "^5.3.4",
 		"react-scripts": "5.0.1",
+		"recoil": "^0.7.7",
 		"styled-components": "^5.3.11",
 		"typescript": "^4.9.5",
 		"web-vitals": "^2.1.4"
